# pyro

./: Cargo.toml  README.md  app  app.rs  bindings.md  channels.md  features.md  install.sh  pyro.mod
.github/workflows/: bump-formula.yml  release.yml
Formula/: pyro.rb
docs/: datastructures.md  error_handling.md  functional.md  generics.md  native_bindings.md  packages.md  rust_integration.md  stdlib.md  threading.md  tutorial.md  types.md
examples/: app.pyro  hello.pyro  lib.pyro
pyro-cli/: Cargo.toml
pyro-cli/src/: main.rs  manifest.rs  util.rs
pyro-cli/src/cmd/: build.rs  externs.rs  get.rs  init.rs  installer.rs  mod.rs  run.rs  shell.rs
pyro-cli/tests/: test_pkg_mgr.sh
pyro-core/: Cargo.toml
pyro-core/src/: ast.rs  convert.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  transpiler.rs
pyro-core/src/stdlib/: env.rs  fs.rs  io.rs  json.rs  math.rs  mod.rs  path.rs  process.rs  random.rs  time.rs
src/: main.pyro
tests/: channels.pyro  class_test.pyro  concurrency_patterns.pyro  concurrency_safety.pyro  control_flow_test.pyro  curry_test.pyro  custom_error_test.pyro  demo.pyro  ds_test.pyro  error_test.pyro  for_test.pyro  generics_demo.pyro  method_curry_test.pyro  methods_test.pyro  panic_test.pyro  record_methods.pyro  record_test.pyro  stdlib_env_test.pyro  stdlib_fs_test.pyro  stdlib_io.pyro  stdlib_json_test.pyro  stdlib_math.pyro  stdlib_path_test.pyro  stdlib_process_test.pyro  stdlib_random_test.pyro  stdlib_test.pyro  threads.pyro  typed_channels.pyro
tests/rust_integration_test/: main.pyro  native.rs  pyro.mod
(+2 files in other folders)
