[package]
name = "pyro-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
pyro-core = { path = "../pyro-core" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
rustyline = "17.0.2"
